test/org/midica/testfiles/failing/oto-duplicate-option-tr.midica
INCLUDE inc/instruments.midica

1: c (m,q=2,tr=/32)
0: c
1: (tr=/16) d
